[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player/PlayerCamera.gd" type="Script" id=1]
[ext_resource path="res://Player/CameraNode.gd" type="Script" id=2]
[ext_resource path="res://Player/SelectionBox.gd" type="Script" id=3]

[node name="PlayerCamera" type="Spatial"]
script = ExtResource( 1 )

[node name="CameraNode" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 20, 0 )
script = ExtResource( 2 )

[node name="Camera" type="Camera" parent="CameraNode"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0 )

[node name="SelectionBox" type="Control" parent="CameraNode"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cameraTween" type="Tween" parent="."]
playback_process_mode = 0
